--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@ repositories {
     }
     maven { url 'https://jitpack.io' }
     maven { url 'https://repo.xenondevs.xyz/releases' }
-
 }
 
 dependencies {
@@ -27,8 +26,18 @@ dependencies {
     implementation 'de.exlll:configlib-paper:4.5.0'
     implementation 'com.github.alexdev03:drink:1.5.1'
     implementation 'xyz.xenondevs.invui:invui:1.37'
+    implementation 'com.github.Anon8281:UniversalScheduler:0.1.6'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.2'
+    testImplementation 'io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 shadowJar {
@@ -39,6 +48,7 @@ shadowJar {
     relocate 'dev.jorel.commandapi', 'dev.unnm3d.redistrade.libraries.commandapi'
     relocate 'com.jonahseguin.drink', 'dev.unnm3d.redistrade.libraries.drink'
     relocate 'xyz.xenondevs.invui', 'dev.unnm3d.redistrade.libraries.invui'
+    relocate 'com.github.Anon8281.universalScheduler', 'dev.unnm3d.redistrade.libraries.universalScheduler'
 }
 
 def targetJavaVersion = 21
