--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '1.0-SNAPSHOT'
+version = 'BETA1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -22,9 +22,11 @@ dependencies {
     compileOnly 'com.zaxxer:HikariCP:5.1.0'
     compileOnly 'org.projectlombok:lombok:1.18.34'
     compileOnly 'io.lettuce:lettuce-core:6.4.0.RELEASE'
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7.1"
+    compileOnly "com.github.Emibergo02:RedisEconomy:main-SNAPSHOT"
 
     implementation 'de.exlll:configlib-paper:4.5.0'
-    implementation 'com.github.alexdev03:drink:1.5.1'
+    implementation 'com.github.alexdev03:drink:1.5.3'
     implementation 'xyz.xenondevs.invui:invui:1.37'
     implementation 'com.github.Anon8281:UniversalScheduler:0.1.6'
 
@@ -48,6 +50,7 @@ shadowJar {
     relocate 'dev.jorel.commandapi', 'dev.unnm3d.redistrade.libraries.commandapi'
     relocate 'com.jonahseguin.drink', 'dev.unnm3d.redistrade.libraries.drink'
     relocate 'xyz.xenondevs.invui', 'dev.unnm3d.redistrade.libraries.invui'
+    relocate 'xyz.xenondevs.inventoryaccess', 'dev.unnm3d.redistrade.libraries.inventoryaccess'
     relocate 'com.github.Anon8281.universalScheduler', 'dev.unnm3d.redistrade.libraries.universalScheduler'
 }
 
