--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = 'BETA9'
+version = '1.0'
 
 repositories {
     mavenCentral()
@@ -25,11 +25,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.34'
     compileOnly 'io.lettuce:lettuce-core:6.4.0.RELEASE'
     compileOnly "com.github.MilkBowl:VaultAPI:1.7.1"
-    compileOnly "com.github.Emibergo02:RedisEconomy:4.3.9"
+    compileOnly "com.github.Emibergo02:RedisEconomy:4.3.19"
 
     implementation 'de.exlll:configlib-paper:4.5.0'
     implementation 'com.github.alexdev03:drink:1.5.3'
-    implementation 'xyz.xenondevs.invui:invui:1.41'
+    implementation 'xyz.xenondevs.invui:invui:1.43'
     implementation 'com.github.Anon8281:UniversalScheduler:0.1.6'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
