--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java'
     id 'io.github.goooler.shadow' version "8.1.7"
     id 'maven-publish'
+    id "com.modrinth.minotaur" version "2.8.7"
 }
 
 group = 'dev.unnm3d'
-version = '1.0.2'
+version = '1.0.3-BETA'
 
 repositories {
     mavenCentral()
@@ -30,20 +31,21 @@ dependencies {
     implementation 'de.exlll:configlib-paper:4.5.0'
     implementation 'com.github.alexdev03:drink:1.5.3'
     implementation 'xyz.xenondevs.invui:invui:1.43'
-    implementation 'com.github.Anon8281:UniversalScheduler:0.1.6'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
     testImplementation(platform("org.junit:junit-bom:5.10.2"))
     testImplementation 'io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT'
-    testImplementation 'com.github.seeseemelk:MockBukkit-v1.20:3.93.2'
+    testImplementation 'org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.21.0'
     testImplementation 'com.zaxxer:HikariCP:5.1.0'
     testImplementation 'org.xerial:sqlite-jdbc:3.46.0.0'
+    testImplementation 'xyz.xenondevs.invui:invui:1.43'
     testImplementation 'org.projectlombok:lombok:1.18.34'
     testImplementation 'io.lettuce:lettuce-core:6.4.0.RELEASE'
     testImplementation "com.github.MilkBowl:VaultAPI:1.7.1"
     testImplementation "com.github.Emibergo02:RedisEconomy:4.3.19"
+    testImplementation 'com.github.alexdev03:drink:1.5.3'
 
 }
 
@@ -60,7 +62,6 @@ shadowJar {
     relocate 'com.jonahseguin.drink', 'dev.unnm3d.redistrade.libraries.drink'
     relocate 'xyz.xenondevs.invui', 'dev.unnm3d.redistrade.libraries.invui'
     relocate 'xyz.xenondevs.inventoryaccess', 'dev.unnm3d.redistrade.libraries.inventoryaccess'
-    relocate 'com.github.Anon8281.universalScheduler', 'dev.unnm3d.redistrade.libraries.universalScheduler'
 }
 
 def targetJavaVersion = 21
@@ -90,6 +91,15 @@ publishing {
             artifact shadowJar
         }
     }
+}
+
+modrinth {
+    token = System.getenv("MODRINTH_TOKEN") // Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
+    projectId = "redistrade" // This can be the project ID or the slug. Either will work!
+    versionType = "beta" // This is the default -- can also be `beta` or `alpha`
+    uploadFile = jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
+    gameVersions = ["1.21.4", "1.21.3","1.21.2","1.21.1","1.21","1.20.6",] // Must be an array, even with only one version
+    loaders = ["bukkit","spigot","paper"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
 }
 
 processResources {
