--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '1.0.3-BETA'
+version = '1.0.3'
 
 repositories {
     mavenCentral()
@@ -30,8 +30,7 @@ dependencies {
 
     implementation 'de.exlll:configlib-paper:4.5.0'
     implementation 'com.github.alexdev03:drink:1.5.3'
-    implementation 'xyz.xenondevs.invui:invui:1.43'
-    implementation 'de.tr7zw:item-nbt-api:2.14.1'
+    implementation 'xyz.xenondevs.invui:invui:2.0.0-alpha.6'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
@@ -41,7 +40,7 @@ dependencies {
     testImplementation 'org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.21.0'
     testImplementation 'com.zaxxer:HikariCP:5.1.0'
     testImplementation 'org.xerial:sqlite-jdbc:3.46.0.0'
-    testImplementation 'xyz.xenondevs.invui:invui:1.43'
+    testImplementation 'xyz.xenondevs.invui:invui:2.0.0-alpha.6'
     testImplementation 'org.projectlombok:lombok:1.18.34'
     testImplementation 'io.lettuce:lettuce-core:6.4.0.RELEASE'
     testImplementation "com.github.MilkBowl:VaultAPI:1.7.1"
@@ -63,7 +62,6 @@ shadowJar {
     relocate 'com.jonahseguin.drink', 'dev.unnm3d.redistrade.libraries.drink'
     relocate 'xyz.xenondevs.invui', 'dev.unnm3d.redistrade.libraries.invui'
     relocate 'xyz.xenondevs.inventoryaccess', 'dev.unnm3d.redistrade.libraries.inventoryaccess'
-    relocate("de.tr7zw.changeme.nbtapi", "dev.unnm3d.redistrade.libraries.nbtapi")
     exclude 'colors.bin'
 }
 
@@ -99,7 +97,7 @@ publishing {
 modrinth {
     token = System.getenv("MODRINTH_TOKEN") // Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
     projectId = "redistrade" // This can be the project ID or the slug. Either will work!
-    versionType = "beta" // This is the default -- can also be `beta` or `alpha`
+    versionType = "release" // This is the default -- can also be `beta` or `alpha`
     uploadFile = jar // With Loom, this MUST be set to `remapJar` instead of `jar`!
     gameVersions = ["1.21.4", "1.21.3","1.21.2","1.21.1","1.21","1.20.6",] // Must be an array, even with only one version
     loaders = ["bukkit","spigot","paper"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
