--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,8 @@ main: dev.unnm3d.redistrade.RedisTrade
 api-version: '1.19'
 depend:
   - Vault
+softdepend:
+  - RedisEconomy
 libraries:
   - net.kyori:adventure-text-minimessage:4.17.0
   - com.zaxxer:HikariCP:5.1.0
