--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '1.3.2'
+version = '2.0-BETA'
 
 repositories {
     mavenCentral()
@@ -18,6 +18,7 @@ repositories {
     }
     maven { url = "https://repo.codemc.io/repository/maven-public/" }
     maven { url 'https://repo.xenondevs.xyz/releases' }
+    maven { url 'https://maven.enginehub.org/repo/' }
 }
 
 dependencies {
@@ -27,6 +28,7 @@ dependencies {
     compileOnly 'io.lettuce:lettuce-core:6.5.2.RELEASE'
     compileOnly "com.github.MilkBowl:VaultAPI:1.7.1"
     compileOnly "com.github.Emibergo02:RedisEconomy:4.3.19"
+    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.9-SNAPSHOT'
 
     implementation 'de.exlll:configlib-paper:4.5.0'
     implementation 'com.github.alexdev03:drink:1.5.3'
