--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '2.0-BETA'
+version = '2.0-BETA2'
 
 repositories {
     mavenCentral()
@@ -33,11 +33,11 @@ dependencies {
     implementation 'de.exlll:configlib-paper:4.5.0'
     implementation 'com.github.alexdev03:drink:1.5.3'
     //implementation 'xyz.xenondevs.invui:invui:2.0.0-alpha.6'
-    implementation 'xyz.xenondevs.invui:invui-core:1.43'
-    implementation 'xyz.xenondevs.invui:inventory-access-r19:1.43'
-    implementation 'xyz.xenondevs.invui:inventory-access-r20:1.43'
-    implementation 'xyz.xenondevs.invui:inventory-access-r21:1.43'
-    implementation 'xyz.xenondevs.invui:inventory-access-r22:1.43'
+    implementation 'xyz.xenondevs.invui:invui-core:1.44'
+    implementation 'xyz.xenondevs.invui:inventory-access-r19:1.44'
+    implementation 'xyz.xenondevs.invui:inventory-access-r20:1.44'
+    implementation 'xyz.xenondevs.invui:inventory-access-r21:1.44'
+    implementation 'xyz.xenondevs.invui:inventory-access-r22:1.44'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
@@ -47,7 +47,7 @@ dependencies {
     testImplementation 'org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.21.0'
     testImplementation 'com.zaxxer:HikariCP:5.1.0'
     testImplementation 'org.xerial:sqlite-jdbc:3.46.0.0'
-    testImplementation 'xyz.xenondevs.invui:invui:1.43'
+    testImplementation 'xyz.xenondevs.invui:invui:1.44'
     testImplementation 'org.projectlombok:lombok:1.18.34'
     testImplementation 'io.lettuce:lettuce-core:6.5.2.RELEASE'
     testImplementation "com.github.MilkBowl:VaultAPI:1.7.1"
@@ -105,7 +105,7 @@ publishing {
 modrinth {
     token = System.getenv("MODRINTH_TOKEN") // Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
     projectId = "redistrade" // This can be the project ID or the slug. Either will work!
-    versionType = "release" // This is the default -- can also be `beta` or `alpha`
+    versionType = "beta" // This is the default -- can also be `beta` or `alpha`
     uploadFile = shadowJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
     gameVersions = ["1.21.4", "1.21.3","1.21.1","1.21.2","1.20.6"] // Must be an array, even with only one version
     loaders = ["paper","spigot","bukkit"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
