--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
     maven { url = "https://repo.codemc.io/repository/maven-public/" }
     maven { url 'https://repo.xenondevs.xyz/releases' }
     maven { url 'https://maven.enginehub.org/repo/' }
+    maven { url 'https://repo.rosewooddev.io/repository/public/' }
 }
 
 dependencies {
@@ -29,6 +30,7 @@ dependencies {
     compileOnly "com.github.MilkBowl:VaultAPI:1.7.1"
     compileOnly "com.github.Emibergo02:RedisEconomy:4.3.19"
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.9-SNAPSHOT'
+    compileOnly 'org.black_ixx:playerpoints:3.3.0'
 
     implementation 'de.exlll:configlib-paper:4.5.0' exclude group: 'org.snakeyaml', module: 'snakeyaml-engine'
     implementation 'com.github.alexdev03:drink:1.5.3'
