--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ depend:
 softdepend:
   - RedisEconomy
   - WorldGuard
+  - PlayerPoints
 libraries:
   - net.kyori:adventure-text-minimessage:4.18.0
   - com.zaxxer:HikariCP:5.1.0
