--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '2.0.1'
+version = '2.0.3'
 
 repositories {
     mavenCentral()
@@ -30,14 +30,14 @@ dependencies {
     compileOnly "com.github.Emibergo02:RedisEconomy:4.3.19"
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.9-SNAPSHOT'
 
-    implementation 'de.exlll:configlib-paper:4.5.0'
+    implementation 'de.exlll:configlib-paper:4.5.0' exclude group: 'org.snakeyaml', module: 'snakeyaml-engine'
     implementation 'com.github.alexdev03:drink:1.5.3'
-    //implementation 'xyz.xenondevs.invui:invui:2.0.0-alpha.6'
-    implementation 'xyz.xenondevs.invui:invui-core:1.44'
-    implementation 'xyz.xenondevs.invui:inventory-access-r19:1.44'
-    implementation 'xyz.xenondevs.invui:inventory-access-r20:1.44'
-    implementation 'xyz.xenondevs.invui:inventory-access-r21:1.44'
-    implementation 'xyz.xenondevs.invui:inventory-access-r22:1.44'
+    implementation 'xyz.xenondevs.invui:invui-core:1.45'
+    implementation 'xyz.xenondevs.invui:inventory-access-r19:1.45'
+    implementation 'xyz.xenondevs.invui:inventory-access-r20:1.45'
+    implementation 'xyz.xenondevs.invui:inventory-access-r21:1.45'
+    implementation 'xyz.xenondevs.invui:inventory-access-r22:1.45'
+    implementation 'xyz.xenondevs.invui:inventory-access-r23:1.45'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
@@ -107,7 +107,7 @@ modrinth {
     projectId = "redistrade" // This can be the project ID or the slug. Either will work!
     versionType = "release" // This is the default -- can also be `beta` or `alpha`
     uploadFile = shadowJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
-    gameVersions = ["1.21.4", "1.21.3","1.21.1","1.21.2","1.20.6"] // Must be an array, even with only one version
+    gameVersions = ["1.21.5","1.21.4", "1.21.3","1.21.1","1.21.2","1.20.6"] // Must be an array, even with only one version
     loaders = ["paper","spigot","bukkit"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
 }
 
