--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,11 @@ dependencies {
     compileOnly "com.github.Emibergo02:RedisEconomy:4.3.19"
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.9-SNAPSHOT'
     compileOnly 'org.black_ixx:playerpoints:3.3.0'
-    compileOnly 'org.geysermc.floodgate:api:2.2.3-SNAPSHOT'
+    compileOnly 'org.geysermc.floodgate:api:2.2.4-SNAPSHOT'
 
     implementation 'de.exlll:configlib-paper:4.6.1' exclude group: 'org.snakeyaml', module: 'snakeyaml-engine'
     implementation 'com.github.alexdev03:drink:1.5.3'
+    implementation 'com.github.Anon8281:UniversalScheduler:0.1.7'
     implementation 'xyz.xenondevs.invui:invui-core:1.46'
     implementation 'xyz.xenondevs.invui:inventory-access-r19:1.46'
     implementation 'xyz.xenondevs.invui:inventory-access-r20:1.46'
@@ -76,6 +77,8 @@ shadowJar {
     relocate 'com.jonahseguin.drink', 'dev.unnm3d.redistrade.libraries.drink'
     relocate 'xyz.xenondevs.invui', 'dev.unnm3d.redistrade.libraries.invui'
     relocate 'xyz.xenondevs.inventoryaccess', 'dev.unnm3d.redistrade.libraries.inventoryaccess'
+    relocate 'com.github.Anon8281.universalScheduler', 'dev.unnm3d.redistrade.libraries.universalScheduler'
+
     exclude 'colors.bin'
 }
 
