--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -32,6 +32,9 @@ permissions:
   redistrade.getitem:
     description: Get a gui item to your hand
     default: false
+  redistrade.inspect:
+    description: Inspect a item
+    default: false
   redistrade.reload:
     description: Get a gui item to your hand
     default: false
@@ -70,3 +73,4 @@ permissions:
       redistrade.reload: true
       redistrade.modify: true
       redistrade.spectate: true
+      redistrade.inspect: true
