--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '2.2.1'
+version = '3.0.0-BETA'
 
 repositories {
     mavenCentral()
@@ -32,7 +32,7 @@ dependencies {
     compileOnly 'org.black_ixx:playerpoints:3.3.0'
     compileOnly 'org.geysermc.floodgate:api:2.2.5-SNAPSHOT'
 
-    implementation 'de.exlll:configlib-paper:4.6.1' exclude group: 'org.snakeyaml', module: 'snakeyaml-engine'
+    implementation 'de.exlll:configlib-paper:4.6.4' exclude group: 'org.snakeyaml', module: 'snakeyaml-engine'
     implementation 'com.github.alexdev03:drink:1.5.3'
     implementation 'com.github.Anon8281:UniversalScheduler:0.1.7'
     implementation 'xyz.xenondevs.invui:invui-core:1.49'
