--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '3.0.0-BETA'
+version = '3.1.0-BETA'
 
 repositories {
     mavenCentral()
@@ -113,7 +113,7 @@ modrinth {
     projectId = "redistrade" // This can be the project ID or the slug. Either will work!
     versionType = "release" // This is the default -- can also be `beta` or `alpha`
     uploadFile = shadowJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
-    gameVersions = ["1.21.11", "1.21.10", "1.21.9", "1.21.8", "1.21.7", "1.21.6", "1.21.5", "1.21.4", "1.21.3"]
+    gameVersions = ["1.21.10", "1.21.9", "1.21.8", "1.21.7", "1.21.6", "1.21.5", "1.21.4", "1.21.3"]
     // Must be an array, even with only one version
     loaders = ["paper", "spigot", "bukkit"]
     // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
