Complete Folia support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: RedisTrade
 version: '${version}'
 main: dev.unnm3d.redistrade.RedisTrade
 api-version: '1.21'
+folia-supported: true
 depend:
   - Vault
 softdepend:
