--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'dev.unnm3d'
-version = '3.1.0-BETA'
+version = '3.1.1-BETA'
 
 repositories {
     mavenCentral()
@@ -33,7 +33,7 @@ dependencies {
     compileOnly 'org.geysermc.floodgate:api:2.2.5-SNAPSHOT'
 
     implementation 'de.exlll:configlib-paper:4.6.4' exclude group: 'org.snakeyaml', module: 'snakeyaml-engine'
-    implementation 'com.github.alexdev03:drink:1.5.3'
+    implementation 'com.github.Emibergo02:drink:8859698119'
     implementation 'com.github.Anon8281:UniversalScheduler:0.1.7'
     implementation 'xyz.xenondevs.invui:invui-core:1.49'
     implementation 'xyz.xenondevs.invui:inventory-access-r22:1.49'
@@ -113,7 +113,7 @@ modrinth {
     projectId = "redistrade" // This can be the project ID or the slug. Either will work!
     versionType = "release" // This is the default -- can also be `beta` or `alpha`
     uploadFile = shadowJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
-    gameVersions = ["1.21.10", "1.21.9", "1.21.8", "1.21.7", "1.21.6", "1.21.5", "1.21.4", "1.21.3"]
+    gameVersions = ["1.21.11","1.21.10", "1.21.9", "1.21.8", "1.21.7", "1.21.6", "1.21.5", "1.21.4", "1.21.3"]
     // Must be an array, even with only one version
     loaders = ["paper", "spigot", "bukkit"]
     // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
